# satellite-tle-data-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  go.mod  satellite-tle-data.go
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.lua  features.lua  satellite-tle-data.rockspec  satellite-tle-data_sdk.lua  satellite-tle-data_types.lua
php/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  (+4 more)
py/: AGENTS.md  CLAUDE.md  LICENSE  README.md  REFERENCE.md  config.py  features.py  pyproject.toml  satellitetledata_sdk.py  satellitetledata_types.py
py/core/: control.py  error.py  helpers.py  response.py  result.py
py/entity/: tle_entity.py
py/feature/: audit_feature.py  base_feature.py  idempotency_feature.py  paging_feature.py  retry_feature.py  telemetry_feature.py  test_feature.py  timeout_feature.py
py/test/: feature_harness.py  runner.py  test_exists.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py  test_tle_direct.py  test_tle_entity.py
py/utility/: done.py  feature_add.py  feature_init.py  fetcher.py  make_context.py  make_error.py  make_options.py  make_request.py  make_spec.py  param.py  prepare_auth.py  prepare_body.py  prepare_params.py  prepare_path.py  prepare_query.py  result_basic.py  result_body.py  result_headers.py  transform_request.py
(+414 files in other folders)
